--- a/cine_betsa/peliculas/Templates/Login.html
+++ b/cine_betsa/peliculas/Templates/Login.html
@@ -4,4 +4,4 @@
     {{ form.as_p }}
     <button type="submit">Ingresar</button>
 </form>
-<a href="{% url 'registrar_usuario' %}">¿Aùn no tienes una cuenta? Regístrate</a>
+<a href="{% url 'registrar_usuario' %}">¿Aún no tienes una cuenta? Regístrate</a>
