--- a/cine_betsa/peliculas/Templates/registro.html
+++ b/cine_betsa/peliculas/Templates/registro.html
@@ -4,4 +4,4 @@
     {{ form.as_p }}
     <button type="submit">Registrarse</button>
 </form>
-<a href="{% url 'login_usuario' %}">¿Ya tienes cuenta? Inicia sesión</a>
+<a href="{% url 'login' %}">¿Ya tienes cuenta? Inicia sesión</a>
